--- a/arado.qrc
+++ b/arado.qrc
@@ -16,6 +16,8 @@
         <file>images/usb.png</file>
         <file>images/messagebox_info.png</file>
         <file>images/rss.png</file>
+        <file>images/kdmconfig.png</file>
+        <file>images/noatunloopsong.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
