--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -29,7 +29,7 @@
       </sizepolicy>
      </property>
      <property name="toolTip">
-      <string>Add URL: Press the logo and add the entered URL to your local database. A pop-up window asks you to add a short URL description or keywords seperated by blanks.</string>
+      <string>Add URL: Press the logo and add an URL to your local database. A pop-up window asks you to add a short URL description or keywords seperated by blanks.</string>
      </property>
      <property name="text">
       <string/>
