--- a/arado.qrc
+++ b/arado.qrc
@@ -18,6 +18,9 @@
         <file>images/rss.png</file>
         <file>images/kdmconfig.png</file>
         <file>images/noatunloopsong.png</file>
+        <file>images/down.png</file>
+        <file>images/up.png</file>
+        <file>images/connect_established.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
