new image for AddDevice.

--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -43,7 +43,7 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="../arado.qrc">:/images/kdmconfig.png</pixmap>
+      <pixmap resource="../arado.qrc">:/images/server.png</pixmap>
      </property>
     </widget>
    </item>
