--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -347,7 +347,7 @@
      </property>
      <property name="icon">
       <iconset resource="../arado.qrc">
-       <normaloff>:/images/connect_established.png</normaloff>:/images/connect_established.png</iconset>
+       <normaloff>:/images/server.png</normaloff>:/images/server.png</iconset>
      </property>
      <property name="iconSize">
       <size>
