--- a/arado.qrc
+++ b/arado.qrc
@@ -25,6 +25,7 @@
         <file>images/mail.png</file>
         <file>images/cancel.png</file>
         <file>images/button_ok.png</file>
+        <file>images/server.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
