--- a/arado.qrc
+++ b/arado.qrc
@@ -26,6 +26,8 @@
         <file>images/cancel.png</file>
         <file>images/button_ok.png</file>
         <file>images/server.png</file>
+        <file>images/kfm_home.png</file>
+        <file>images/remote.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
