--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -14,21 +14,7 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="0" colspan="5">
-    <widget class="QLabel" name="labeltrusted">
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Constant Devices:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="5" colspan="4">
+   <item row="4" column="6" colspan="4">
     <widget class="QLabel" name="labeltrecommended">
      <property name="font">
       <font>
@@ -42,7 +28,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="11" colspan="2">
+   <item row="4" column="12" colspan="2">
     <widget class="QLabel" name="labelepisodic">
      <property name="font">
       <font>
@@ -56,14 +42,14 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="4">
+   <item row="5" column="0" colspan="4">
     <widget class="QLabel" name="labelipdrop_4">
      <property name="text">
       <string>IP-Drop-Time (30 - 120 Min):</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="4">
+   <item row="5" column="5">
     <widget class="QSpinBox" name="ipdroptrusted">
      <property name="toolTip">
       <string>IP-connections of your devices are dropped for sync-balancing reasons each X minutes (10-30).</string>
@@ -79,14 +65,14 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="5" colspan="3">
+   <item row="5" column="6" colspan="3">
     <widget class="QLabel" name="labelipdrop_3">
      <property name="text">
       <string>IP-Drop-Time (10 - 29 Min):</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="8">
+   <item row="5" column="9">
     <widget class="QSpinBox" name="ipdroprecommended">
      <property name="toolTip">
       <string>IP-connections of your devices are dropped for sync-balancing reasons each X minutes (10-30).</string>
@@ -105,14 +91,14 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="11">
+   <item row="5" column="12">
     <widget class="QLabel" name="labelipdrop_2">
      <property name="text">
       <string>IP-Drop-Time (1 - 9 Min):</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="12">
+   <item row="5" column="13">
     <widget class="QSpinBox" name="ipdropepisodic">
      <property name="toolTip">
       <string>IP-connections of your devices are dropped for sync-balancing reasons each X minutes (10-30).</string>
@@ -128,7 +114,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="5">
+   <item row="6" column="0" colspan="6">
     <widget class="QTreeWidget" name="treeWidget_trusted">
      <attribute name="headerDefaultSectionSize">
       <number>100</number>
@@ -150,7 +136,7 @@
      </column>
     </widget>
    </item>
-   <item row="5" column="5" rowspan="9" colspan="4">
+   <item row="6" column="6" rowspan="9" colspan="4">
     <widget class="QTreeWidget" name="treeWidget_recommended">
      <attribute name="headerDefaultSectionSize">
       <number>100</number>
@@ -172,7 +158,7 @@
      </column>
     </widget>
    </item>
-   <item row="5" column="11" rowspan="9" colspan="2">
+   <item row="6" column="12" rowspan="9" colspan="2">
     <widget class="QTreeWidget" name="treeWidget_episodic">
      <attribute name="headerDefaultSectionSize">
       <number>100</number>
@@ -194,7 +180,7 @@
      </column>
     </widget>
    </item>
-   <item row="16" column="5" colspan="2">
+   <item row="17" column="6" colspan="2">
     <widget class="QPushButton" name="pushButton_remove">
      <property name="minimumSize">
       <size>
@@ -220,7 +206,7 @@
      </property>
     </widget>
    </item>
-   <item row="16" column="7" colspan="2">
+   <item row="17" column="8" colspan="2">
     <widget class="QPushButton" name="pushButton_copyid">
      <property name="enabled">
       <bool>false</bool>
@@ -249,7 +235,7 @@
      </property>
     </widget>
    </item>
-   <item row="17" column="5" colspan="4">
+   <item row="18" column="6" colspan="4">
     <widget class="QPushButton" name="pushButton_addtotrusted">
      <property name="minimumSize">
       <size>
@@ -265,7 +251,7 @@
      </property>
      <property name="icon">
       <iconset resource="../arado.qrc">
-       <normaloff>:/images/kdmconfig.png</normaloff>:/images/kdmconfig.png</iconset>
+       <normaloff>:/images/kfm_home.png</normaloff>:/images/kfm_home.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -275,7 +261,7 @@
      </property>
     </widget>
    </item>
-   <item row="17" column="11">
+   <item row="18" column="12">
     <widget class="QLabel" name="labelipcachesize_3">
      <property name="layoutDirection">
       <enum>Qt::RightToLeft</enum>
@@ -285,7 +271,7 @@
      </property>
     </widget>
    </item>
-   <item row="17" column="12">
+   <item row="18" column="13">
     <widget class="QSpinBox" name="ipcachesize">
      <property name="toolTip">
       <string>Amount of IP-adresses in your IP-cache (1500-5000). Rise up, if all IP-adresses are outdated or offline and connections fail after a start.  Then each minute a request is sent to the boot-IP-connections, to fill the cache for 100%.</string>
@@ -301,7 +287,7 @@
      </property>
     </widget>
    </item>
-   <item row="16" column="11" colspan="2">
+   <item row="17" column="12" colspan="2">
     <widget class="QCheckBox" name="checkboxdisableepisodic">
      <property name="layoutDirection">
       <enum>Qt::RightToLeft</enum>
@@ -311,21 +297,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="9">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="11" colspan="2">
+   <item row="2" column="12" colspan="2">
     <widget class="Line" name="line_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="17" column="0" colspan="5">
+   <item row="18" column="0" colspan="6">
     <widget class="QPushButton" name="buttonAddDevice">
      <property name="minimumSize">
       <size>
@@ -357,7 +336,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="3" colspan="2">
+   <item row="7" column="3" colspan="3">
     <widget class="QSpinBox" name="myportinternal">
      <property name="toolTip">
       <string>You need to forward this port in your NAT/router, if you want to connect.</string>
@@ -370,7 +349,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="1" colspan="2">
+   <item row="7" column="1" colspan="2">
     <widget class="QLineEdit" name="addipinternal">
      <property name="palette">
       <palette>
@@ -452,7 +431,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="1" colspan="2">
+   <item row="8" column="1" colspan="2">
     <widget class="QLineEdit" name="addipexternal">
      <property name="palette">
       <palette>
@@ -534,21 +513,21 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
+   <item row="7" column="0">
     <widget class="QLabel" name="labelmyport_2">
      <property name="text">
       <string>Internal IP+Port</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="0">
+   <item row="8" column="0">
     <widget class="QLabel" name="labelmyport_3">
      <property name="text">
       <string>External IP+Port</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="3" colspan="2">
+   <item row="8" column="3" colspan="3">
     <widget class="QSpinBox" name="myportexternal">
      <property name="toolTip">
       <string>You need to forward this port in your NAT/router, if you want to connect.</string>
@@ -561,14 +540,14 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="4">
+   <item row="9" column="5">
     <widget class="QSpinBox" name="urldelay">
      <property name="toolTip">
       <string>An URLs is transferred each X seconds to each connection. Delay defines the used bandwidth. 0 means as fast as possible.</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="5">
+   <item row="0" column="0" colspan="6">
     <widget class="QPushButton" name="buttonStartSync">
      <property name="minimumSize">
       <size>
@@ -594,7 +573,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="5" colspan="4">
+   <item row="0" column="6" colspan="4">
     <widget class="QPushButton" name="pushButton_savesettings_2">
      <property name="enabled">
       <bool>true</bool>
@@ -623,7 +602,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="11" colspan="2">
+   <item row="0" column="12" colspan="2">
     <widget class="QPushButton" name="pushButton_closesettings">
      <property name="enabled">
       <bool>true</bool>
@@ -652,10 +631,91 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="0">
+   <item row="9" column="0">
     <widget class="QLabel" name="labelurldelay">
      <property name="text">
       <string>URL-Delay (Sec):</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="10">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label">
+     <property name="maximumSize">
+      <size>
+       <width>35</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="baseSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="../arado.qrc">:/images/kfm_home.png</pixmap>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="6">
+    <widget class="QLabel" name="label_2">
+     <property name="maximumSize">
+      <size>
+       <width>35</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="../arado.qrc">:/images/kdmconfig.png</pixmap>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="12">
+    <widget class="QLabel" name="label_3">
+     <property name="maximumSize">
+      <size>
+       <width>35</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="../arado.qrc">:/images/remote.png</pixmap>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="6">
+    <widget class="QLabel" name="labeltrusted">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Constant Devices</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::AutoText</enum>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="../arado.qrc">:/images/kfm_home.png</pixmap>
      </property>
     </widget>
    </item>
